UserDetails using InMemoryUserDetailsManager alternative to JdbcUserDetailsManager to store data on runtime

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=ThinkNotesBackend
-spring.security.user.name=admin
-spring.security.user.password=smithson
+#spring.security.user.name=admin
+#spring.security.user.password=smithson
+
 spring.datasource.url=jdbc:mysql://localhost:3306/thinknotes?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=toor
