separating the profile with development and production. for development "application-dev.properties.example" created as "application-dev.properties" contains secret jwt code and  confidential files might be added like email app passwords and oauth2 client secrets..

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### spring app level ###
+application-dev.properties
+#application-prod.proprties ignored it will be configured depending upon environmental variables
